--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -32,3 +32,23 @@
     font-family: "Kalam Bold";
     src: url("../../assets/fonts/kalam-bold.ttf");
 }
+
+@font-face {
+    font-family: "Source Sans Extra Light";
+    src: url("../../assets/fonts/sourcesanspro-extralight.ttf");
+}
+
+@font-face {
+    font-family: "Source Sans Light";
+    src: url("../../assets/fonts/sourcesanspro-light.ttf");
+}
+
+@font-face {
+    font-family: "Source Sans Regular";
+    src: url("../../assets/fonts/sourcesanspro-regular.ttf");
+}
+
+@font-face {
+    font-family: "Source Sans Bold";
+    src: url("../../assets/fonts/sourcesanspro-bold.ttf");
+}
