--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -66,7 +66,7 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-    background: $darker;
+    background: $dark;
 }
 
 /* Position and sizing of clickable cross button */
