--- a/src/components/styles/partials/_variables.scss
+++ b/src/components/styles/partials/_variables.scss
@@ -10,14 +10,16 @@ $large-desktop-width: 1920px;
 // Color palette
 $primary-color: #6667AB;
 $secondary-color: #5eb36c;
+$design: #f8c828;
+$design-light: #fbe087;
+$development: #2858f8;
+$development-light: #87a2fb;
 $white: #ffffff;
-$light: #EBEBF0;
-$lighter: #F2F2F7;
+$light: #f2f2f2;
 $chips-bg: #EFEFEF;
 $section-bg: #fafafa;
 $gray: #808080;
 $box-shadow: rgba(0, 0, 0, 0.12);
 $box-shadow-dark: rgba(0,0,0,0.25);
 $black: #000000;
-$dark: #242426;
-$darker: #1C1C1E;
+$dark: #222222;
