--- a/src/components/styles/partials/_variables.scss
+++ b/src/components/styles/partials/_variables.scss
@@ -9,17 +9,17 @@ $large-desktop-width: 1920px;
 
 // Color palette
 $primary-color: #6667AB;
-$secondary-color: #5eb36c;
-$design: #f8c828;
-$design-light: #fbe087;
-$development: #2858f8;
-$development-light: #87a2fb;
 $white: #ffffff;
-$light: #f2f2f2;
-$chips-bg: #EFEFEF;
-$section-bg: #fafafa;
+$light-bg: #f2f2f2;
 $gray: #808080;
-$box-shadow: rgba(0, 0, 0, 0.12);
-$box-shadow-dark: rgba(0,0,0,0.25);
+$dark-gray: #595959;
 $black: #000000;
 $dark: #222222;
+$design: #f8c828;
+$design-light: #fbe087;
+$development: #5eb36c;
+$development-light: #a1d2a9;
+$chips-bg: #EFEFEF;
+$section-bg: #fafafa;
+$box-shadow: rgba(0, 0, 0, 0.12);
+$box-shadow-dark: rgba(0, 0, 0, 0.25);
