--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -45,7 +45,7 @@
   margin-bottom: 24px;
 }
 
-.h4 {
+.h4, .secondary-btn, .dev-btn, .design-btn {
   font-family: "Source Sans Bold";
   font-size: 16px;
   line-height: 25.6px;
@@ -102,20 +102,12 @@ ul, ol {
   align-items: center;
 }
 
-.box-shadow, .not-found__btn, .card, .header {
+.box-shadow, .not-found__btn, .project__img, .card, .header {
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.12);
 }
 
 .box-shadow-light {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.grid, .project {
-  display: grid;
-}
-
-.grid-12-col {
-  grid-template-columns: repeat(12, 1fr);
 }
 
 .design {
@@ -130,16 +122,46 @@ ul, ol {
   background-color: #fbe087;
 }
 
+.design-btn {
+  color: #222222;
+  font-size: 20px;
+  padding-bottom: 4px;
+  border-bottom: solid 2px #f8c828;
+}
+
 .dev {
-  color: #2858f8;
+  color: #5eb36c;
 }
 
 .dev-bg {
-  background-color: #2858f8;
+  background-color: #5eb36c;
 }
 
 .dev-bg-light {
-  background-color: #87a2fb;
+  background-color: #a1d2a9;
+}
+
+.dev-btn {
+  color: #222222;
+  font-size: 20px;
+  padding-bottom: 4px;
+  border-bottom: solid 2px #5eb36c;
+}
+
+.primary-btn {
+  background-color: #6667AB;
+  color: #f2f2f2;
+}
+
+.secondary-btn {
+  color: #222222;
+  font-size: 20px;
+  padding-bottom: 4px;
+  border-bottom: solid 2px #6667AB;
+}
+
+.dark-color {
+  color: #222222;
 }
 
 /* Header Styles */
@@ -163,7 +185,7 @@ ul, ol {
 @media (min-width: 1024px) {
   .header__wrapper {
     padding: 32px 128px;
-    max-width: 1280px;
+    max-width: 1024px;
   }
 }
 .header__logo {
@@ -405,32 +427,41 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .project {
-  background-color: "Source Sans Light";
-}
-@media (min-width: 768px) {
-  .project {
-    padding: 32px 64px;
-  }
-}
-@media (min-width: 1024px) {
-  .project {
-    padding: 72px 72px 96px;
-  }
-}
-@media (min-width: 1280px) {
-  .project {
-    padding: 72px 0 200px;
-  }
+  background-color: #f2f2f2;
 }
 .project__hero {
   padding: 32px;
 }
+@media (min-width: 768px) {
+  .project__hero {
+    padding: 32px 64px;
+  }
+}
+@media (min-width: 1024px) {
+  .project__hero {
+    padding: 56px 128px;
+  }
+}
 .project__wrapper {
   margin: 0 auto;
-  max-width: 1024px;
 }
 .project__section {
   padding: 32px 32px 40px;
+  width: 100vw;
+}
+@media (min-width: 768px) {
+  .project__section {
+    padding: 32px 64px 48px;
+  }
+}
+@media (min-width: 1024px) {
+  .project__section {
+    padding: 80px 128px;
+  }
+}
+.project__section-content {
+  max-width: 768px;
+  margin: 0 auto;
 }
 .project__title {
   margin-bottom: 24px;
@@ -442,7 +473,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   }
 }
 .project__subtitle {
-  color: #808080;
+  color: #595959;
 }
 .project__discipline {
   color: #808080;
@@ -461,23 +492,13 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 .project__overview {
   align-items: flex-start;
-  justify-content: space-evenly;
   flex-direction: column;
   margin-bottom: 40px;
 }
 @media (min-width: 768px) {
   .project__overview {
     flex-direction: row;
-  }
-}
-@media (min-width: 1024px) {
-  .project__overview {
-    padding: 32px 24px;
-  }
-}
-@media (min-width: 1280px) {
-  .project__overview {
-    padding: 48px;
+    justify-content: flex-start;
   }
 }
 .project__overview--left {
@@ -487,7 +508,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   .project__overview--left {
     width: 45%;
     max-width: 45%;
-    margin: 0;
+    margin: 0 64px 0 0;
   }
 }
 @media (min-width: 1280px) {
@@ -506,21 +527,33 @@ Note: Beware of modifying this element as it can break the animations - you shou
     margin-left: 30%;
   }
 }
+.project__ctas {
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 16px;
+}
+.project__ctas a {
+  margin-bottom: 24px;
+}
 .project__img {
   width: 100%;
   height: auto;
 }
 @media (min-width: 1280px) {
   .project__img {
-    height: 500px;
-    width: auto;
+    height: auto;
+    width: 768px;
   }
 }
 .project p {
   margin-bottom: 24px;
 }
-.project a {
-  text-decoration: underline;
+.project__nav {
+  display: block;
+  margin-bottom: 80px;
+}
+.project__nav span {
+  margin-left: 16px;
 }
 
 .about__wrapper {
