--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -18,7 +18,7 @@
 
         @include laptop {
             padding: 32px 128px;
-            max-width: $small-desktop-width;
+            max-width: $laptop-width;
         }
     }
 
