--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -85,6 +85,7 @@
 body {
   min-height: 100vh;
   color: #222222;
+  background-color: #f2f2f2;
 }
 
 a {
@@ -426,9 +427,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
   color: #ffffff;
 }
 
-.project {
-  background-color: #f2f2f2;
-}
 .project__hero {
   padding: 32px;
 }
@@ -441,6 +439,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
   .project__hero {
     padding: 56px 128px;
   }
+}
+.project p {
+  margin-bottom: 24px;
 }
 .project__wrapper {
   margin: 0 auto;
@@ -491,41 +492,23 @@ Note: Beware of modifying this element as it can break the animations - you shou
   }
 }
 .project__overview {
-  align-items: flex-start;
-  flex-direction: column;
   margin-bottom: 40px;
-}
-@media (min-width: 768px) {
-  .project__overview {
-    flex-direction: row;
-    justify-content: flex-start;
-  }
 }
 .project__overview--left {
   margin-bottom: 24px;
 }
-@media (min-width: 768px) {
-  .project__overview--left {
-    width: 45%;
-    max-width: 45%;
-    margin: 0 64px 0 0;
-  }
+.project__overview--right li {
+  justify-content: flex-start;
+  align-items: flex-end;
+  margin-bottom: 24px;
 }
-@media (min-width: 1280px) {
-  .project__overview--left {
-    max-width: 43%;
-  }
+.project__overview--right img {
+  width: 32px;
+  height: auto;
+  margin-right: 8px;
 }
-@media (min-width: 768px) {
-  .project__overview--right {
-    width: 30%;
-  }
-}
-@media (min-width: 1280px) {
-  .project__overview--right {
-    max-width: 40%;
-    margin-left: 30%;
-  }
+.project__overview--right p {
+  margin: 0;
 }
 .project__ctas {
   flex-direction: column;
@@ -544,9 +527,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
     height: auto;
     width: 768px;
   }
-}
-.project p {
-  margin-bottom: 24px;
 }
 .project__nav {
   display: block;
