--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -1,8 +1,6 @@
 // Project Details Page Styles
 
 .project {
-    background-color: $light-bg;
-
     &__hero {
         padding: 32px;
 
@@ -13,6 +11,10 @@
         @include laptop {
             padding: 56px 128px;
         }
+    }
+
+    & p {
+        margin-bottom: 24px;
     }
 
     &__wrapper {
@@ -65,37 +67,28 @@
     }
 
     &__overview {
-        align-items: flex-start;
-        flex-direction: column;
         margin-bottom: 40px;
-
-        @include tablet {
-            flex-direction: row;
-            justify-content: flex-start;
-        }
 
         &--left {
             margin-bottom: 24px;
-
-            @include tablet {
-                width: 45%;
-                max-width: 45%;
-                margin: 0 64px 0 0;
-            }
-
-            @include small-desktop {
-                max-width: 43%;
-            }
         }
 
         &--right {
-            @include tablet {
-                width: 30%;
+            
+            & li {
+                justify-content: flex-start;
+                align-items: flex-end;
+                margin-bottom: 24px;
             }
 
-            @include small-desktop {
-                max-width: 40%;
-                margin-left: 30%;
+            & img {
+                width: 32px;
+                height: auto;
+                margin-right: 8px;
+            }
+
+            & p {
+                margin: 0;
             }
         }
     }
@@ -119,10 +112,6 @@
             height: auto;
             width: 768px;
         }
-    }
-
-    & p {
-        margin-bottom: 24px;
     }
 
     &__nav {
