--- a/src/components/styles/partials/_footer.scss
+++ b/src/components/styles/partials/_footer.scss
@@ -13,6 +13,11 @@
             flex-direction: row;
             padding: 40px 128px;
         }
+
+        @include laptop {
+            padding: 48px 128px;
+            max-width: $laptop-width;
+        }
     }
 
     p {
