--- a/src/components/styles/partials/_variables.scss
+++ b/src/components/styles/partials/_variables.scss
@@ -9,6 +9,7 @@ $large-desktop-width: 1920px;
 
 // Color palette
 $primary-color: #6667AB;
+$primary-light: #a5a6ce;
 $white: #ffffff;
 $light-bg: #f2f2f2;
 $gray: #808080;
