--- a/src/components/styles/partials/_global.scss
+++ b/src/components/styles/partials/_global.scss
@@ -54,9 +54,26 @@ ul, ol {
 .design-btn {
     color: $dark;
     @extend .h4;
+    font-family: $regular;
     font-size: 20px;
-    padding-bottom: 4px;
-    border-bottom: solid 2px $design;
+    position: relative;
+
+        &::before {
+            content: '';
+            background-color: $design-light;
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            width: 100%;
+            height: 4px;
+            z-index: -1;
+            transition: all .3s ease-in-out;
+        }
+    
+        &:hover::before {
+            bottom: 0;
+            height: 100%;
+        }
 }
 
 .dev {
@@ -74,9 +91,26 @@ ul, ol {
 .dev-btn {
     color: $dark;
     @extend .h4;
+    font-family: $regular;
     font-size: 20px;
-    padding-bottom: 4px;
-    border-bottom: solid 2px $development;
+    position: relative;
+
+    &::before {
+        content: '';
+        background-color: $development-light;
+        position: absolute;
+        left: 0;
+        bottom: -2px;
+        width: 100%;
+        height: 4px;
+        z-index: -1;
+        transition: all .3s ease-in-out;
+    }
+
+    &:hover::before{
+        bottom: 0;
+        height: 100%;
+    }
 }
 
 .primary-btn {
@@ -88,8 +122,6 @@ ul, ol {
     color: $dark;
     @extend .h4;
     font-size: 20px;
-    padding-bottom: 4px;
-    border-bottom: solid 2px $primary-color;
 }
 
 .dark-color {
