--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -115,12 +115,33 @@
     }
 
     &__nav {
-        display: block;
         margin-bottom: 80px;
+        display: block;
+    }
+
+    &__nav-wrap {
+        position: relative;
+        width: fit-content;
+        &::before {
+            content: '';
+            background-color: $primary-light;
+            position: absolute;
+            left: 0;
+            bottom: -6px;
+            width: 100%;
+            height: 6px;
+            z-index: -1;
+            transition: all .3s ease-in-out;
+        }
+    
+        &:hover::before {
+            bottom: 0;
+            height: 100%;
+        }
     }
 
     &__nav span {
-        margin-left: 16px;
+        margin-left: 8px;
     }
 
 }
